<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <!-- Application name -->
    <string name="app_name">Voice Calc</string>
    <!-- If there is a syntax error in the user entered calculation, an error dialog will appear.  This is the title. -->
    <string name="error">Error</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit0">0</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit1">1</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit2">2</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit3">3</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit4">4</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit5">5</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit6">6</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit7">7</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit8">8</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit9">9</string>
    <!-- Button name on screen to delete the last entered digit or operator -->
    <string name="del">DEL</string>
    <!-- Button name on screen to clear the entire calculation field -->
    <string name="clear">AC</string>
    <!-- Do not translate. Unicode division sign; don't translate. Displayed as button on screen. -->
    <string name="div">\u00f7</string>
    <!-- Do not translate. Unicode multiplication sign; don't translate. Displayed as button on screen. -->
    <string name="mul">\u00d7</string>
    <!-- Do not translate. Plus sign, displayed as button on screen -->
    <string name="plus">+</string>
    <!-- Do not translate. Unicode minus sign; don't translate. Displayed as button on screen. -->
    <string name="minus">\u2212</string>
    <!-- Do not translate. Decimal point; don't translate. Displayed as button on screen. -->
    <string name="dot">.</string>
    <!-- Do not translate. Equal sign; don't translate. Displayed as button on screen. -->
    <string name="equal">=</string>
    <!-- Do not translate. Down arrow; don't translate. Displayed as button on screen. -->
    <string name="enter">\u2193</string>
    <!-- Displayed on buttons on screen for the sin function. -->
    <string name="sin">sin</string>
    <!-- Displayed on buttons on screen for the cos function. -->
    <string name="cos">cos</string>
    <!-- Displayed on buttons on screen for the tan function. -->
    <string name="tan">tan</string>
       
    <!-- Do not translate. Unicode pi sign; don't translate. Displayed as button on screen. -->
    <string name="pi">\u03c0</string>
    <!-- Displayed on buttons on screen for the e function. -->
    <string name="e">e</string>
    <!-- Displayed on buttons on screen for the ln function. -->
    <string name="ln">ln</string>
    <!-- Displayed on buttons on screen for the log function. -->
    <string name="lg">log</string>
    <!-- Displayed on buttons on screen for a left parenthesis. -->
    <string name="leftParen">(</string>
    <!-- Displayed on buttons on screen for a right parenthesis. -->
    <string name="rightParen">)</string>
    <!-- Do not translate. Unicode square root sign; don't translate. Displayed on button on screen. -->
    <string name="sqrt">\u221a</string>
    <!-- Do not translate. Displayed on buttons on screen. -->
    <string name="power">^</string>
    <!-- Do not translate. -->
    <string name="factorial">!</string>
    <!-- Menu item text to take user to the screen with the basic digits and operators. -->
    <string name="basic">Basic panel</string>
    <!-- Menu item text to take user to the screen with the advanced functions, such as sin, cos, ln, log, etc. -->
    <string name="advanced">Advanced panel</string>
    <!-- Menu item text to clear the calculation history. -->
    <string name="clear_history">Clear history</string>
    <!-- Menu item text to settings. -->
    <string name="setting">Setting</string>
    <!-- Menu item text to about. -->
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="voice">Voice</string>
    <string name="loadingvoice">Loading Voice Package...</string>
    <string name="voicesummary">真人播报每次按键</string>
    <string name="haptic">Haptic Feedback</string>
    <string name="hapticsummary">按键时震动</string>
    <string name="app_title" formatted="false">%s v%s</string>
    <string name="about_text">Android平台适用\n\n沃林克软件\n©版权所有\n\n官网：<a href="http://sw.wolinke.com">http://sw.wolinke.com</a>\n</string>
    <string name="about_note">* 本软件使用完全免费，使用过程中产生的网络流量费用由网络运营商收取。</string>    
    <string name="voice_pkg">Voice Package</string>
    <string name="default_voice">Default</string>
    <string name="select_voice">Select Voice Package</string>
    <string name="download">Download</string>
    <string name="download_summary">Download Package from offical website</string>
    <string name="voice_setting">Voice Package</string>
    <string name="ads_info">如果您对广告感到不适，点击关闭</string>
    <string name="convert_capital">大写</string>
    <string name="RMB_CHINESE">人民币大写</string>
    <string name="error_number">数值错误！</string>
    <string name="others">其它选项</string>
    <string name="remember_result">退出时保存上次运算结果</string>
    <string name="history_on">保存历史</string>
    <string name="moreapp">精品应用</string>
    <string name="closead">关闭广告</string>
    <string name="closead_summary">关闭广告每日消耗15积分</string>
    <string name="point_not_enough">积分不足</string>
    <string name="point_not_prompt" formatted="false">您现在的积分是%d，关闭广告功能每日需要消耗%d积分，马上免费获取积分？</string>
    <string name="suggestions">意见或建议</string>
    <string name="officalsite">官方网站</string>
    <string name="fb_bug">反馈问题</string>
    <string name="fb_summary">直接提交您的建议或意见</string>
</resources>
