<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory android:title="@string/feedback">
<CheckBoxPreference
android:key="voice_on"
android:defaultValue="true"
android:title="@string/voice"
android:summary="@string/voicesummary"
/>
<CheckBoxPreference
android:key="haptic_on"
android:defaultValue="true"
android:title="@string/haptic"
android:summary="@string/hapticsummary"
/>
</PreferenceCategory>
<PreferenceCategory android:title="@string/suggestions">
<Preference
    android:key="fb_bug"
    android:title="@string/fb_bug"
    android:summary="@string/fb_summary"
>
</Preference>
<Preference
     android:title="@string/officalsite"
     android:summary="http://sw.wolinke.com"
>
     <intent android:action="android.intent.action.VIEW"
             android:data="http://sw.wolinke.com" />
</Preference>
-</PreferenceCategory>
</PreferenceScreen>
